k8s/app/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
